// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingHandler returns null when called with loading false and no component 1`] = `null`;

exports[`LoadingHandler returns the LoadingComponent 1`] = `
<img
  alt="loading..."
  src="/img/spinner.svg"
/>
`;

exports[`LoadingHandler returns the LoadingMessage when called without LoadingComponent 1`] = `
<div
  className="handler--loading"
>
  loading...
</div>
`;

exports[`LoadingHandler returns the LoadingMessage with given loading message 1`] = `
<div
  className="handler--loading"
>
  keep keep loading
</div>
`;

exports[`LoadingHandler returns the component when called with loading false 1`] = `
<h1>
  Test
</h1>
`;
